[tool.poetry]
name = "finrope"
version = "0.1.0"
description = "FinRope: Financial Risk Patterns"
authors = ["Russell Jurney <rjurney@graphlet.ai>"]
license = "MIT"
readme = "README.md"
packages = [{include = "finrope"}]

[tool.poetry.urls]
"Company Homepage" = "https://graphlet.ai"
"Blog Post" = "https://blog.graphlet.ai/financial-crime-and-corruption-network-motifs-4cf2e8e10eb5"
"Code Repository" = "https://github.com/Graphlet-AI/FinRope"
"Bug Tracker" = "https://github.com/Graphlet-AI/FinRope/issues"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
followthemoney = "^3.8.0"
gitpython = "^3.1.44"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
flake8 = "^7.1.1"
ipython = "^8.32.0"
isort = "^6.0.0"
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ["py311"]
include = ["graphlet", "test"]

[tool.isort]
profile = "black"
src_paths = ["graphlet", "test"]

[tool.mypy]
python_version = "3.11"
mypy_path = ["graphlet", "test"]
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
